cluster/apps/tools/changedetection-io/ingress-route.yaml
---
apiVersion: ingressroutes.traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: change-detection
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`change-detection.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: changedetection-io
          namespace: tools
          port: 5000
          scheme: http
      middlewares:
        - name: traefik-forward-auth
          namespace: networking
  tls:
    secretName: "change-detection-${SECRET_DOMAIN/./-}-tls"
